# rl-chess

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  developer.html  index.html  legal_moves.txt  pyproject.toml  rules.html  run.sh  test_chess_rules.py
agent/: deep_q_agent.py  random_agent.py
app/: .gitattributes  .gitignore  app.js  app.py  main.js  main.py  model.h5  model.json  package-lock.json  package.json
app/agent/: agent.py
app/index/: minimax-alpha-beta.ejs  random.ejs  reinforced.ejs
app/learning/: .gitignore  train.py
app/public/: index.html  rules.html
app/python-gui/: README.md  board.py  main.py  ui.py
app/src/: board.py  index.css  index.js  piece.py  square.py
app/static/: style.css
app/templates/: minimax-alpha-beta.html  random.html  reinforced.html
arcane_chess_react/: package-lock.json  package.json
arcane_chess_react/src/: App.tsx
chess_agents/: pyproject.toml  setup.py
chess_agents/chess_agents/: agent.py  deep_q_agent.py
chess_agents/chess_agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
chess_environement/: pyproject.toml  setup.py
chess_environement/chess_environement/: env.py
chess_environement/chess_environement.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
css/: style.css
frontend/: app.py  settings.py
frontend/components/: board_logic.py
learning/: README.md  board.py  move.py  pieces.py  player.py  ui.py
runs/Jul13_22-10-27_MacBook-Pro-de-Rayan.local/: events.out.tfevents.1720901427.MacBook-Pro-de-Rayan.local.46179.0
runs/Jul13_22-11-12_MacBook-Pro-de-Rayan.local/: events.out.tfevents.1720901472.MacBook-Pro-de-Rayan.local.46730.0
runs/Jul13_22-11-23_MacBook-Pro-de-Rayan.local/: events.out.tfevents.1720901483.MacBook-Pro-de-Rayan.local.46921.0
runs/Jul13_22-11-41_MacBook-Pro-de-Rayan.local/: events.out.tfevents.1720901501.MacBook-Pro-de-Rayan.local.47159.0
runs/Jul13_22-19-22_MacBook-Pro-de-Rayan.local/: events.out.tfevents.1720901962.MacBook-Pro-de-Rayan.local.50501.0
src/: train.py
src/agents/: agent.py  deep_q_agent.py  random_agent.py
src/environements/: chess_env.py
training/: engine.py
(+33 files in other folders)
