[project]
name = "arcane-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.10.0",
    "gym>=0.26.2",
    "lightning>=2.4.0",
    "pytorch-lightning>=2.4.0",
    "rich>=13.8.1",
    "tensorboard>=2.17.1",
]
