[project]
name = "arcane-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.10.0",
    "gym>=0.26.2",
    "hydra-core>=1.3.2",
    "lightning>=2.4.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "pytorch-lightning>=2.4.0",
    "ray[data,serve,train,tune]>=2.37.0",
    "rich>=13.8.1",
    "tensorboard>=2.17.1",
    "wandb>=0.18.2",
]
