[project]
name = "rl-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chess>=1.10.0",
  "dm-tree>=0.1.8",
  "gym>=0.26.2",
  "gymnasium>=1.0.0",
  "hydra-core>=1.3.2",
  "lightning>=2.4.0",
  "loguru>=0.7.2",
  "lz4>=4.4.4",
  "opencv-python>=4.11.0.86",
  "pillow>=11.1.0",
  "pygame>=2.6.1",
  "python-dotenv>=1.0.1",
  "ray[data,serve,train,tune]>=2.37.0",
  "raylib[rllib]>=5.5.0.2",
  "rich>=13.8.1",
  "scipy>=1.15.1",
  "tensorboard>=2.17.1",
  "typer>=0.15.1",
  "wandb>=0.18.2",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
